<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    tools:context="com.example.francisqueins.breakingtheice.MainActivity">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAcid_green"
        android:gravity="center_horizontal">

        <com.example.francisqueins.breakingtheice.TypefacedTextView
            android:id="@+id/editLocationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:text="@string/edit_contact"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.francisqueins.breakingtheice.TypefacedTextView
            android:id="@+id/conPhoneView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/con_phone"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorGainsboro" />

        <EditText
            android:id="@+id/conPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="2"
            android:inputType="phone"
            android:textColor="@color/colorGainsboro">


            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.francisqueins.breakingtheice.TypefacedTextView
            android:id="@+id/conNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/con_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorGainsboro" />

        <EditText
            android:id="@+id/conName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textCapWords"
            android:textColor="@color/colorGainsboro">

        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorGrey"
            android:onClick="updateContact"
            android:text="@string/save_data"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorLightBlue"
            />

        <Button
            android:id="@+id/deleteButton"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorGrey"
            android:onClick="removeContact"
            android:text="@string/delete_button"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorLightBlue"
            android:layout_marginLeft="5dp"/>

    </TableRow>
</TableLayout>
